<resources>
    <string name="admobi_adUid_interstitial_add">ca-app-pub-7949207340789864/8972024638</string>
    <string name="admobi_adUid_banner_add">ca-app-pub-7949207340789864/7495291433</string>
    <string name="app_name">Om Sai</string>
    <string name="action_settings">Settings</string>
    <string name="omsainathaya"> Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n Om Namo Sai Nathaya Namaha\n\n
        						
        					</string>
    <string name="hello_world">   Om Sai Namo Namah |\nShree Sai Namo Namah || \nJai Jai Sai Namo Namah |\nSadguru Sai Namo Namah ||</string>
    <string name="mantra2"> Sada Nimbarvrikshasya mooladhiwasat |\nSudhasravinam tiktamapi-apriyam tam ||\nTarum Kalpavrikshadhikam sadhayantam |\nNamameeshwaram Sadgurum Sai Natham ||\n</string>
    <string name="s2"> Sri Satchitanand Sadguru Sainath Maharaj Ki Jai</string>
    <string name="sabka"> Sab Ka Malik Ek Hai</string>
    <string name="drawer_open">Select Your Options</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="sai_bhajana">\t\t Om Sai Namo Namah |\n \t\t Sri Sai Namo Namah ||\n
Jaya Jaya Sai Namo Namah |\n Sadguru Sai Namo Namah ||</string>
    <string name="sai_bhajana1">\t\t Om Sai Namo Namah |\n \t\t Sri Sai Namo Namah ||\n
Jaya Jaya Sai Namo Namah |\n Sadguru Sai Namo Namah ||\n\n
\t\t Om Sai Namo Namah |\n \t\t Sri Sai Namo Namah ||\n
Jaya Jaya Sai Namo Namah |\n Sadguru Sai Namo Namah ||\n\n\t\t Om Sai Namo Namah |\n \t\t Sri Sai Namo Namah ||\n
Jaya Jaya Sai Namo Namah |\n Sadguru Sai Namo Namah ||</string>
    <string name="livedarshana">In this app we can see the Live Darshahan of Sri Shirdi Sai Baba From Shirdi Sai Baba Temple.\n\nBaba is 
        every where we have to surrender to him, so we will get the blessings from him.
        \n\nJust click on the above button we can see the Live Darshana From Shiridi Sai Baba Temple\n\n 
        Source: Shri Saibaba Sansthan Trust, Shirdi has reserved all rights of live Shirdi SaiBaba Mahasamadhi Darshan.</string>
    <string name="aboutapp">\n\nThis application is dedicated to devotees of Shri Shirdi Saibaba  and provides a collection of Stories, Wallpapers, Shlokas, Museum photos etc at one 
place.

\n\nFollowing are salient features:

\n\n1. Babas Aarathi - Gives us the soothness while listening and a great feeling of devotion to Sai Baba while saying the Aarathi.

\n\n2. Quotes and Sayings - Asks people to believe in God but also work hard, be cheerful, help each other, be humble and above all, there is only one God.

\n\n3. Rare Pics - Takes us back in early 20th century where Sai Baba lived and mixed with his devotees.

\n\n4. Sai Baba Satcharite - This gives the in depth understanding of Shiridi Sai Baba.

\n\n5. Assurances -  Baba assures all of us to have faith in him and he will take care of his devotee.
\n\n6. Other Mantras Of Sai Baba 
  		\n\n\t\t\t1.Sainatha moola beeja manthrakshary
        \n\n\t\t\t2.Sainatha Kashta Nivarana Stotram
        \n\n\t\t\t3.Shirdi Sai Baba Udhi Mantra
        \n\n\t\t\t4.Shri Sai Kalpavruksha Mantra
        \n\n\t\t\t5.Shirdi Sai Baba Vibuthi Sloka


\n\nNOTE: This app runs on any Android phone with version 2.3 GingerBread and above including Tablets.
      
   \n\n  All information for this applications has been collected from various sources in Internet.
      
   \n\nApplication opens with Feature called Mantra (Sada Nimbarvrikshasya mooladhiwasat...) now this will not play by default, 
      
   \n\nyou Can Play it with using play button.
      
   \n\nBaba Mantra and arati now will not overlap you can play whichever you want no problem of overlap . 
   
   \n\nPlease let us know your feedback on application and we sill strive to make it better for Sai Baba devotees.</string>
    <string name="satcharithe">Sai Satcharitra is the holy book which helps devotees like us to learn how Baba lived his simple life before he attained mukthi in 1918.Reading his life 

helps us to learn how he works in moulding our character and life.Its something to be felt by ones own relationship and bond with Baba who alone can 

understand how a true saint can act on him or her.
All we must do is complete surrender to Sadgurus feet and he will take care of the rest.If you are in pain or sorrows or any worries , read Sai Satcharitra 

for 2 reasons.

\n\nFirstly , for the one who reads this book with total surrender to Shirdi SaiBaba and his thoughts alone, SaiBaba will surely do a miracle . 
\n\nSecondly, as a Sai devotee , this book helps you to understand his way of moulding his devotees life even by making them wait to attain benefits ,giving them 

pains, hurdles etc so as to face the karma of their past births and finally giving them materialistic benefits and ultimately the path towards God.

\n\n</string>
</resources>