<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        
        ads:adUnitId="@string/admobi_adUid_banner_add" />

    <RelativeLayout
        android:id="@+id/aboutapp_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/adView"
        >

        <TextView
            android:id="@+id/t_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/s2"
            android:textColor="#ff0000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_title" >

            <TextView
                android:id="@+id/t_aboutapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutapp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>